# DirSize

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-build-release.yml
src/: main.cpp
test/: CMakeLists.txt  testDSizeWorks.bat  testDSizeWorks.sh
